--- a/index.html
+++ b/index.html
@@ -96,14 +96,11 @@
   <button onclick="showSection('about')">About Me</button>
 </nav>
 
-<div class="section active" id="home">
-  <p>Welcome to your galaxy-themed site! 🌌</p>
-  <p>Everything here sparkles like the stars above.</p>
-</div>
+
 
 <div class="section" id="about">
   <h2>About Me</h2>
-  <p>Hello! I’m [Your Name]. You can customize this section with your bio, hobbies, or anything you want to share with visitors.</p>
+  <p>Hello! I’m Qstar. I am a Dropper in multiple servers (A dropper is someone who gives stuff for free like spotify premium), I code py, html, and I'm currently trying to learn C#</p>
 </div>
 
 <script>
