--- a/index.html
+++ b/index.html
@@ -4,81 +4,98 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Qstar Stuff</title>
-<script src="https://accounts.google.com/gsi/client" async defer></script>
-<script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
 <style>
-  body, html {
-    margin: 0;
-    padding: 0;
+  * { margin: 0; padding: 0; box-sizing: border-box; }
+
+  body {
     font-family: Arial, sans-serif;
-    height: 100%;
-    background: radial-gradient(ellipse at bottom, #1b003d 0%, #4a007f 100%);
+    background: radial-gradient(circle at bottom, #1a0033, #4b0082, #7a00cc);
     color: white;
+    min-height: 100vh;
     overflow-x: hidden;
-    text-align: center;
     position: relative;
   }
 
-  /* Stars */
+  /* Star background */
   .stars {
     width: 2px;
     height: 2px;
     background: white;
     position: absolute;
     border-radius: 50%;
-    animation: twinkle 2s infinite alternate;
+    animation: twinkle 3s infinite alternate;
   }
   @keyframes twinkle {
-    from { opacity: 0.2; transform: scale(0.5); }
-    to { opacity: 1; transform: scale(1.2); }
+    from { opacity: 0.1; transform: scale(1); }
+    to { opacity: 1; transform: scale(1.5); }
   }
 
   header {
-    font-size: 3em;
-    padding: 50px 20px;
-    text-shadow: 0 0 10px #fff, 0 0 20px #ff66ff, 0 0 30px #9900ff;
+    text-align: center;
+    font-size: 3rem;
+    padding: 40px 20px;
+    font-weight: bold;
+    text-shadow: 0 0 10px #fff, 0 0 20px #c77dff, 0 0 30px #9d4edd;
   }
 
-  nav {
-    margin-top: 20px;
-    display: none; /* hidden until login */
+  /* Card container */
+  .card-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    padding: 40px;
+    max-width: 1200px;
+    margin: auto;
   }
-  nav button {
-    margin: 0 10px;
-    padding: 10px 20px;
-    border: 2px solid white;
+
+  /* Individual card */
+  .card {
+    background: rgba(255, 255, 255, 0.07);
+    backdrop-filter: blur(4px);
+    border-radius: 20px;
+    padding: 15px;
+    box-shadow: 0 0 15px rgba(157, 78, 221, 0.5);
+    overflow: hidden;
+    transition: 0.3s;
+  }
+  .card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 0 25px #9d4edd;
+  }
+
+  .card img {
+    width: 100%;
+    height: 140px;
+    object-fit: cover;
+    border-radius: 15px 15px 0 0;
+  }
+
+  .desc {
+    padding: 15px 10px;
+    font-size: 1rem;
+    line-height: 1.4;
+    min-height: 70px;
+  }
+
+  .download-btn {
+    display: block;
+    width: 100%;
+    text-align: center;
+    padding: 12px;
+    background: #9d4edd;
+    border: none;
     border-radius: 10px;
-    background: none;
     color: white;
+    font-size: 1.1rem;
     font-weight: bold;
     cursor: pointer;
-    transition: all 0.3s ease;
+    text-decoration: none;
+    transition: 0.3s;
+    margin-top: 5px;
   }
-  nav button:hover {
-    background: #9900ff;
-    box-shadow: 0 0 10px #ff66ff, 0 0 20px #9900ff;
-  }
-
-  .section {
-    display: none;
-    max-width: 800px;
-    margin: 50px auto;
-    padding: 20px;
-    background: rgba(255,255,255,0.05);
-    border-radius: 15px;
-    text-align: center;
-  }
-  .section.active { display: block; }
-  .section h2 {
-    font-size: 2em;
-    margin-bottom: 20px;
-    text-shadow: 0 0 5px #ff66ff;
-  }
-  .section p { font-size: 1.1em; line-height: 1.6; }
-
-  /* Google login button container */
-  #login-container {
-    margin-top: 50px;
+  .download-btn:hover {
+    background: #c77dff;
+    box-shadow: 0 0 10px #e0aaff, 0 0 20px #9d4edd;
   }
 </style>
 </head>
@@ -86,68 +103,32 @@
 
 <header>Qstar Stuff</header>
 
-<div id="login-container">
-  <div id="g_id_onload"
-       data-client_id="YOUR_GOOGLE_CLIENT_ID"
-       data-callback="handleCredentialResponse"
-       data-auto_prompt="false">
+<div class="card-container">
+
+  <!-- ⭐ CARD 1 (Customize this!) ⭐ -->
+  <div class="card">
+    <img src="https://i.imgur.com/vsfTMqj.png" alt="Preview">
+    <div class="desc">
+      NIGHT TAGGERS MODDED APK
+
+      It has:
+       Modding Hub Gui
+    </div>
+    <a class="download-btn" href="https://www.mediafire.com/file/2rtdrsips1i7p15/NightTaggersNEWUPDATE.apk/file" target="_blank">Download</a>
   </div>
-  <div class="g_id_signin"
-       data-type="standard"
-       data-shape="rectangular"
-       data-theme="filled_blue"
-       data-text="signin_with"
-       data-size="large"
-       data-logo_alignment="left">
-  </div>
+
+
 </div>
-
-<nav id="navbar">
-  <button onclick="showSection('home')">Home</button>
-  <button onclick="showSection('about')">About Me</button>
-</nav>
-
-<div class="section active" id="home">
-  <p>Welcome to your galaxy-themed site! 🌌</p>
-  <p>Everything here sparkles like the stars above.</p>
-</div>
-
-<div class="section" id="about">
-  <h2>About Me</h2>
-  <p>Hello! I’m [Your Name]. You can customize this section with your bio, hobbies, or anything you want to share with visitors.</p>
-</div>
-
-<div id="user-info"></div>
 
 <script>
-  // Star generation
-  const starCount = 200;
-  for (let i = 0; i < starCount; i++) {
-    let star = document.createElement('div');
-    star.className = 'stars';
-    star.style.top = Math.random() * window.innerHeight + 'px';
-    star.style.left = Math.random() * window.innerWidth + 'px';
-    star.style.width = star.style.height = Math.random() * 3 + 1 + 'px';
-    star.style.animationDuration = 1 + Math.random() * 3 + 's';
-    document.body.appendChild(star);
-  }
-
-  // Show section
-  function showSection(id) {
-    document.querySelectorAll('.section').forEach(sec => sec.classList.remove('active'));
-    document.getElementById(id).classList.add('active');
-  }
-
-  // Google login callback
-  function handleCredentialResponse(response) {
-    const data = jwt_decode(response.credential);
-    document.getElementById('user-info').innerHTML = `
-      <h2>Welcome, ${data.name}!</h2>
-      <img src="${data.picture}" alt="Avatar" style="border-radius:50%;width:100px;height:100px;margin-top:10px;">
-    `;
-    document.getElementById('login-container').style.display = 'none';
-    document.getElementById('navbar').style.display = 'block';
-    showSection('home'); // show home after login
+  // Generate stars in background
+  for (let i = 0; i < 180; i++) {
+    let s = document.createElement("div");
+    s.className = "stars";
+    s.style.top = Math.random() * 100 + "vh";
+    s.style.left = Math.random() * 100 + "vw";
+    s.style.animationDuration = 1 + Math.random() * 4 + "s";
+    document.body.appendChild(s);
   }
 </script>
 
